--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
                         <ul>
                             <li>
                                 <span>From &dollar;10 000 </span>
-                                <img src="/img/checked.png" alt="checked">
+                                <img src="img/checked.png" alt="checked">
                             </li>
                             
                             <li>
                                 <span>
                                 30% Discount
                                 </span>
-                                <img src="/img/checked.png" alt="checked">
+                                <img src="img/checked.png" alt="checked">
                             </li>
                             <li>
                                 <span>
                                 From 17% instalments
                                 </span>
-                                <img src="/img/checked.png" alt="checked">
+                                <img src="img/checked.png" alt="checked">
                             </li>
                         </ul>
                         <button>Order</button>
@@ -61,7 +61,7 @@
             <div class="box-descriptions">
                 <div class="single-descriptions">
                     <div class="description-img">
-                        <img src="/img/wyn.png" alt="logwyn">
+                        <img src="img/wyn.png" alt="logwyn">
                     </div>
                     <div class="description-txt">
                         <span>Entrance and Ground Floor: A spacious lobby with marble floors and a large façade lit by crest chandeliers. </span>
@@ -69,7 +69,7 @@
                 </div>
                 <div class="single-descriptions">
                     <div class="description-img">
-                        <img src="/img/wyn.png" alt="logwyn">
+                        <img src="img/wyn.png" alt="logwyn">
                     </div>
                     <div class="description-txt">
                         <span>Lifts and Access: High-speed stainless steel and mirror-coated lifts, as well as escalators. </span>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="single-descriptions">
                     <div class="description-img">
-                        <img src="/img/wyn.png" alt="logwyn">
+                        <img src="img/wyn.png" alt="logwyn">
                     </div>
                     <div class="description-txt">
                         <span>Corporate Floors:Offices with panoramic windows and flexible spaces, optimised for efficiency and productivity. </span>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="single-descriptions">
                     <div class="description-img">
-                        <img src="/img/wyn.png" alt="logwyn">
+                        <img src="img/wyn.png" alt="logwyn">
                     </div>
                     <div class="description-txt">
                         <span>Leisure and relaxation area: Green terrace with breathtaking views of the city and a modern equipped gym </span>
@@ -123,7 +123,7 @@
                 </form>
             </div>
             <div class="form-img">
-                <img src="/img/gb.png" alt="girl">
+                <img src="img/gb.png" alt="girl">
             </div>
         </div>
     </section>
